java/pet-clinic/app/pet-clinic-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pet-clinic-lb
  namespace: pet-clinic
spec:
  type: LoadBalancer
  selector:
    app: pet-clinic
  ports:
    - name: http
      port: 80
      targetPort: 8080
