java/pet-clinic/app/pet-clinic-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pet-clinic
  name: pet-clinic
  namespace: pet-clinic
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pet-clinic
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
